ui: fix block bg images on mobile

--- a/packages/ui/src/pages/friends/CompilationsBlock.css
+++ b/packages/ui/src/pages/friends/CompilationsBlock.css
@@ -1,6 +1,13 @@
 .CompilationsBlock {
   background-image: linear-gradient(rgba(0, 0, 0, 0.38), rgba(0, 0, 0, 0.38)),
     url(../../images/village.jpg);
-  background-size: 1500px;
-  background-position: center 700px;
+  background-size: cover;
+  background-position: center center;
+}
+
+@screen sm {
+  .CompilationsBlock {
+    background-size: 1500px;
+    background-position: center 700px;
+  }
 }
